[gd_scene load_steps=3 format=3 uid="uid://bb624pjfah75o"]

[ext_resource type="Script" path="res://gui_logic/main_menu.gd" id="1_4hfat"]
[ext_resource type="Texture2D" uid="uid://b83v8mfysyicm" path="res://sprites/sizzle logo.png" id="1_a8dmi"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hfat")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 8.0
offset_right = 36.0
offset_bottom = 61.0002
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Tutorial" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.5
offset_top = 40.0
offset_right = 57.5
offset_bottom = 81.0
grow_horizontal = 2
texture = ExtResource("1_a8dmi")

[connection signal="pressed" from="CenterContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
